cluster/ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iloveingress-controller
  labels:
    app: iloveingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iloveingress-controller
  template:
    metadata:
      labels:
        app: iloveingress-controller
    spec:
      containers:
        - name: controller
          image: localhost:5000/k8s_iloveingress_proxy
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: iloveingress-nginx
spec:
  selector:
    app: iloveingress-controller
  ports:
    - protocol: TCP
      port: 80
