cluster/ingress-minimal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: web
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: web
              port:
                number: 8080

  - host: web2
    http:
      paths:
        - backend:
            service:
              name: web
              port:
                number: 8080
          path: /test
          pathType: Prefix
